@@ -5,5 +5,9 @@ blue=color,shiny
 # Leading tabs will be ignored.
 		statement = hello world , obvious
 
+# Test if there is no attribute but spaces are used between
+# key and value
+fookey = bar-value
+
 # An option with no value or attributes
 FeatureFooEnabled
